objects/pse__Work_Calendar__c.object
<CustomObject>
    <customHelpPage>pse__WorkCalendarHelp</customHelpPage>
    <description>Defines the standard working days, regular hours, and public holidays for a resource, region, practice or group.</description>
    <fields>
        <fullName>pse__Friday_End_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Friday End Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Friday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Friday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Friday_Start_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Friday Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                    <default>true</default>
                    <label>08:00 (8:00 AM)</label>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Monday_End_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Monday End Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Monday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Monday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Monday_Start_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Monday Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                    <default>true</default>
                    <label>08:00 (8:00 AM)</label>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Saturday_End_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Saturday End Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Saturday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Saturday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Saturday_Start_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Saturday Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                    <default>true</default>
                    <label>08:00 (8:00 AM)</label>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Standard_Hours_Per_Day__c</fullName>
        <defaultValue>8.0</defaultValue>
        <description>This optional value determines the &quot;standard&quot; hours per day figure (e.g. typically 8.0 for many U.S. Work Calendars) to be used to convert between daily and hourly rates on an Assignment.  If left blank or zero, the org-wide default will be used.</description>
        <inlineHelpText>This optional value determines the &quot;standard&quot; hours per day figure (e.g. typically 8.0 for many U.S. Work Calendars) to be used to convert between daily and hourly rates on an Assignment.  If left blank or zero, the org-wide default will be used.</inlineHelpText>
        <label>Standard Hours Per Day</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_End_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Sunday End Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Sunday_Hours__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Sunday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Sunday_Start_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Sunday Start Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                    <default>true</default>
                    <label>08:00 (8:00 AM)</label>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (9:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Thursday_End_Hour__c</fullName>
        <inlineHelpText>The hour of day a work schedule starts or ends.</inlineHelpText>
        <label>Thursday End Hour</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 (12:00 AM)</fullName>
                </value>
                <value>
                    <fullName>00:30 (12:30 AM)</fullName>
                </value>
                <value>
                    <fullName>01:00 (1:00 AM)</fullName>
                </value>
                <value>
                    <fullName>01:30 (1:30 AM)</fullName>
                </value>
                <value>
                    <fullName>02:00 (2:00 AM)</fullName>
                </value>
                <value>
                    <fullName>02:30 (2:30 AM)</fullName>
                </value>
                <value>
                    <fullName>03:00 (3:00 AM)</fullName>
                </value>
                <value>
                    <fullName>03:30 (3:30 AM)</fullName>
                </value>
                <value>
                    <fullName>04:00 (4:00 AM)</fullName>
                </value>
                <value>
                    <fullName>04:30 (4:30 AM)</fullName>
                </value>
                <value>
                    <fullName>05:00 (5:00 AM)</fullName>
                </value>
                <value>
                    <fullName>05:30 (5:30 AM)</fullName>
                </value>
                <value>
                    <fullName>06:00 (6:00 AM)</fullName>
                </value>
                <value>
                    <fullName>06:30 (6:30 AM)</fullName>
                </value>
                <value>
                    <fullName>07:00 (7:00 AM)</fullName>
                </value>
                <value>
                    <fullName>07:30 (7:30 AM)</fullName>
                </value>
                <value>
                    <fullName>08:00 (8:00 AM)</fullName>
                </value>
                <value>
                    <fullName>08:30 (8:30 AM)</fullName>
                </value>
                <value>
                    <fullName>09:00 (09:00 AM)</fullName>
                </value>
                <value>
                    <fullName>09:30 (9:30 AM)</fullName>
                </value>
                <value>
                    <fullName>10:00 (10:00 AM)</fullName>
                </value>
                <value>
                    <fullName>10:30 (10:30 AM)</fullName>
                </value>
                <value>
                    <fullName>11:00 (11:00 AM)</fullName>
                </value>
                <value>
                    <fullName>11:30 (11:30 AM)</fullName>
                </value>
                <value>
                    <fullName>12:00 (12:00 PM)</fullName>
                </value>
                <value>
                    <fullName>012:30 (12:30 PM)</fullName>
                </value>
                <value>
                    <fullName>13:00 (1:00 PM)</fullName>
                </value>
                <value>
                    <fullName>13:30 (1:30 PM)</fullName>
                </value>
                <value>
                    <fullName>14:00 (2:00 PM)</fullName>
                </value>
                <value>
                    <fullName>14:30 (2:30 PM)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>pse__Thursday_Hours__c</fullName>
        <defaultValue>8</defaultValue>
        <inlineHelpText>Enter the number of hours regularly worked on this day. For example, enter 8 for an eight hour day.</inlineHelpText>
        <label>Thursday Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>